13. Changing our application little bit/BookStore.API/kubernetes/sql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-deployment-bookapp
  namespace: bookapp
spec:
  replicas: 1
  selector:
     matchLabels:
       app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      terminationGracePeriodSeconds: 30
      hostname: mssqlinst
      # securityContext:
      #   fsGroup: 10001
      containers:
      - name: mssql
        image: mcr.microsoft.com/mssql/server:2022-latest
        # resources:
        #   requests:
        #     memory: "1G"
        #     cpu: "2000m"
        #   limits:
        #     memory: "1G"
        #     cpu: "2000m"
        ports:
        - containerPort: 1433
