13. Changing our application little bit/BookStore.API/kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service-bookapp
  namespace: bookapp
spec:
  selector: 
    app: api
  type: ClusterIP
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
