13. Changing our application little bit/BookStore.API/kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-bookapp
  namespace: bookapp
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 8070 # Port on which nginx is listning
