13. Changing our application little bit/BookStore.API/kubernetes/sql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql-service-bookapp
  namespace: bookapp
spec:
  selector:
    app: mssql
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  type: LoadBalancer
