13. Changing our application little bit/BookStore.API/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service-bookapp
  namespace: bookapp
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service-bookapp
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-service-bookapp
                port:
                  number: 80
